[metadata]
name = seeking_alpha
version = 0.0.1
author = Brandon J. Lacy
author_email = Z3R0@duck.com
description = A Python package that wraps Seeking Alpha API endpoints and returns financial data in JSON.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/AG3NTZ3R0/seeking-alpha
project_urls =
    Bug Tracker = https://github.com/AG3NTZ3R0/seeking-alpha/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    requests

[options.packages.find]
where = src